<resources>
    <string name="app_name">Budget</string>
    <string name="title_transaction_list">Transactions</string>
    <string name="transaction_description">Description...</string>
    <string name="transaction_description_error">Description is required</string>
    <string name="transaction_value">Value...</string>
    <string name="transaction_value_error">Value is required</string>
    <string name="deposit_description">Deposit</string>
    <string name="withdraw_description">Withdraw</string>
    <string name="select_transaction_currency_prompt">Select currency</string>
    <string name="transaction_select_currency_label">Currency</string>
    <string name="transaction_list_description">Value:</string>
    <string name="transaction_list_conversionrate_description">Rate</string>
    <string name="menu_refresh">Refresh</string>
    <string-array name="currency_arrays">
        <item>EUR</item>
        <item>USD</item>
    </string-array>
</resources>
